--- a/main.css
+++ b/main.css
@@ -11,11 +11,19 @@
 body
 {
    background-color: #0000ff;
+   background-image: url("pr_meme.jpg");
+   background-repeat: no-repeat;
+   background-attachment: fixed;
+   background-position: center;
    color: #ffff00;
 }
 .h1_top
 {
    text-align: center;
+}
+span
+{
+   background-color: #0000ff;
 }
 .nav_top
 {
