commented out background image

--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@
 body
 {
    background-color: #0000ff;
-   background-image: url("pr_meme.jpg");
+   /* background-image: url("pr_meme.jpg"); */
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center;
